testdata/prettier/w-identifier-special-char.out
Lexical/Parse error: "./testdata/prettier/w-identifier-special-char.goat" (line 3, column 5):
unexpected unknown token: "$"
