testdata/prettier/w-identifier-special-char.goat
proc main()
begin
asdf$asdf := 1;
  write "Test\n";
end
